ingress-customer-controller/ingress-service.yaml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # ADD ANNOTATION
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    # UPDATE ANNOTATION
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
    - http:
        paths:
          - path: /corporate/?(.*)
            pathType: Prefix
            backend:
              service:
                name: corporate-client-cluster-ip-service
                port:
                  number: 4200
          - path: /customer-service-cluster-ip-service/?(.*)
            pathType: Prefix
            backend:
              service:
                name: customer-service-cluster-ip-service
                port:
                  number: 5004
          - path: /restaurant-service-cluster-ip-service/?(.*)
            pathType: Prefix
            backend:
              service:
                name: restaurant-service-cluster-ip-service
                port:
                  number: 5000
          - path: /restaurant-new-reservations-socket-cluster-ip-service/?(.*)
            pathType: Prefix
            backend:
              service:
                name: restaurant-new-reservations-socket-cluster-ip-service
                port:
                  number: 5011
          - path: /?(.*)
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: customer-client-cluster-ip-service
                port:
                  number: 4200
